[gd_scene load_steps=4 format=3 uid="uid://bmveklyaqc6x"]

[ext_resource type="Script" path="res://Scenes/Levels/level.gd" id="1_5evqq"]
[ext_resource type="PackedScene" uid="uid://8e8vmwfilpu3" path="res://Scenes/Player/player.tscn" id="3_lfcx6"]
[ext_resource type="PackedScene" uid="uid://dsvushl04vgsn" path="res://Scenes/Interface/ui.tscn" id="3_wgvya"]

[node name="Level" type="Node2D"]
script = ExtResource("1_5evqq")

[node name="Ground" type="Node2D" parent="."]

[node name="Items" type="Node2D" parent="."]

[node name="PlayerProjectiles" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Player" parent="." instance=ExtResource("3_lfcx6")]
position = Vector2(993, 808)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(0.6, 0.6)
position_smoothing_enabled = true

[node name="UI" parent="." instance=ExtResource("3_wgvya")]

[connection signal="grenade_launch" from="Player" to="." method="_on_player_grenade_launch"]
[connection signal="laser_shoot" from="Player" to="." method="_on_player_laser_shoot"]
